test/localeModels/numa/basics/bad_children.good
$CHPL_HOME/modules/internal/LocalesArray.chpl:45: warning: Compiling with 'CHPL_LOCALE_MODEL=numa' is deprecated; use the 'flat' locale model instead.
bad_children.chpl:2: error: halt reached - No children to iterate over.
